--- a/test-output/old/OsintMon Suite/methods-alphabetical.html
+++ b/test-output/old/OsintMon Suite/methods-alphabetical.html
@@ -1,42 +1,42 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>OsintMon Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a48688">  <td>20/10/04 23:35:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvalidLogin.InvalidCredentials()[pri:2, instance:invalidTestCases.InvalidLogin@3349e9bb]">InvalidCredentials</td> 
-  <td>main@1636506029</td>   <td></td> </tr>
-<tr bgcolor="a48688">  <td>20/10/04 23:34:34</td>   <td>-76008</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvalidLogin.NoCredentials()[pri:1, instance:invalidTestCases.InvalidLogin@3349e9bb]">NoCredentials</td> 
-  <td>main@1636506029</td>   <td></td> </tr>
-<tr bgcolor="ebbee5">  <td>20/10/04 23:34:00</td>   <td>-109911</td> <td title="&gt;&gt;Constaints.SetUrl()[pri:0, instance:validTestcases.ValidLogin@31304f14]">&gt;&gt;SetUrl</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1636506029</td>   <td></td> </tr>
-<tr bgcolor="d079a3">  <td>20/10/04 23:36:27</td>   <td>36918</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidLogin.dropdownSelection()[pri:5, instance:validTestcases.ValidLogin@31304f14]">dropdownSelection</td> 
-  <td>main@1636506029</td>   <td></td> </tr>
-<tr bgcolor="ebbee5">  <td>20/10/04 23:34:33</td>   <td>-77307</td> <td>&nbsp;</td><td title="&lt;&lt;Constaints.endReport()[pri:0, instance:osintMonTestCases.VerifyTitle@79e2c065]">&lt;&lt;endReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1636506029</td>   <td></td> </tr>
-<tr bgcolor="ebbee5">  <td>20/10/04 23:35:55</td>   <td>4769</td> <td>&nbsp;</td><td title="&lt;&lt;Constaints.endReport()[pri:0, instance:invalidTestCases.InvalidLogin@3349e9bb]">&lt;&lt;endReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1636506029</td>   <td></td> </tr>
-<tr bgcolor="ebbee5">  <td>20/10/04 23:37:15</td>   <td>84690</td> <td>&nbsp;</td><td title="&lt;&lt;Constaints.endReport()[pri:0, instance:validTestcases.ValidLogin@31304f14]">&lt;&lt;endReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1636506029</td>   <td></td> </tr>
-<tr bgcolor="ebbee5">  <td>20/10/04 23:34:33</td>   <td>-77324</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:osintMonTestCases.VerifyTitle@79e2c065]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1636506029</td>   <td></td> </tr>
-<tr bgcolor="ebbee5">  <td>20/10/04 23:35:40</td>   <td>-9656</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:invalidTestCases.InvalidLogin@3349e9bb]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1636506029</td>   <td></td> </tr>
-<tr bgcolor="ebbee5">  <td>20/10/04 23:35:55</td>   <td>4768</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:invalidTestCases.InvalidLogin@3349e9bb]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1636506029</td>   <td></td> </tr>
-<tr bgcolor="ebbee5">  <td>20/10/04 23:36:24</td>   <td>33986</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:validTestcases.ValidLogin@31304f14]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1636506029</td>   <td></td> </tr>
-<tr bgcolor="ebbee5">  <td>20/10/04 23:36:27</td>   <td>36917</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:validTestcases.ValidLogin@31304f14]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1636506029</td>   <td></td> </tr>
-<tr bgcolor="ebbee5">  <td>20/10/04 23:37:13</td>   <td>83260</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:validTestcases.ValidLogin@31304f14]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1636506029</td>   <td></td> </tr>
-<tr bgcolor="ebbee5">  <td>20/10/04 23:37:15</td>   <td>84690</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:validTestcases.ValidLogin@31304f14]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1636506029</td>   <td></td> </tr>
-<tr bgcolor="d079a3">  <td>20/10/04 23:37:13</td>   <td>83260</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidLogin.logOut()[pri:6, instance:validTestcases.ValidLogin@31304f14]">logOut</td> 
-  <td>main@1636506029</td>   <td></td> </tr>
-<tr bgcolor="ebbee5">  <td>20/10/04 23:37:15</td>   <td>84763</td> <td title="&lt;&lt;Constaints.tearDown()[pri:0, instance:validTestcases.ValidLogin@31304f14]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1636506029</td>   <td></td> </tr>
-<tr bgcolor="d079a3">  <td>20/10/04 23:35:55</td>   <td>4848</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidLogin.validCredentials(java.lang.String, java.lang.String, java.lang.String)[pri:3, instance:validTestcases.ValidLogin@31304f14]">validCredentials</td> 
-  <td>main@1636506029</td>   <td></td> </tr>
-<tr bgcolor="706975">  <td>20/10/04 23:34:33</td>   <td>-77376</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyTitle.verifyPageTitle()[pri:0, instance:osintMonTestCases.VerifyTitle@79e2c065]">verifyPageTitle</td> 
-  <td>main@1636506029</td>   <td></td> </tr>
-<tr bgcolor="d079a3">  <td>20/10/04 23:36:25</td>   <td>34973</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidLogin.viewMonitor()[pri:4, instance:validTestcases.ValidLogin@31304f14]">viewMonitor</td> 
-  <td>main@1636506029</td>   <td></td> </tr>
+<tr bgcolor="bed7a6">  <td>20/10/05 15:22:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvalidLogin.InvalidCredentials()[pri:2, instance:invalidTestCases.InvalidLogin@6325a3ee]">InvalidCredentials</td> 
+  <td>main@1675763772</td>   <td></td> </tr>
+<tr bgcolor="bed7a6">  <td>20/10/05 15:22:27</td>   <td>-24544</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvalidLogin.NoCredentials()[pri:1, instance:invalidTestCases.InvalidLogin@6325a3ee]">NoCredentials</td> 
+  <td>main@1675763772</td>   <td></td> </tr>
+<tr bgcolor="9fad9d">  <td>20/10/05 15:21:58</td>   <td>-53740</td> <td title="&gt;&gt;Constaints.SetUrl()[pri:0, instance:validTestcases.ValidLogin@5b87ed94]">&gt;&gt;SetUrl</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1675763772</td>   <td></td> </tr>
+<tr bgcolor="a9cea0">  <td>20/10/05 15:23:17</td>   <td>25233</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidLogin.dropdownSelection()[pri:5, instance:validTestcases.ValidLogin@5b87ed94]">dropdownSelection</td> 
+  <td>main@1675763772</td>   <td></td> </tr>
+<tr bgcolor="9fad9d">  <td>20/10/05 15:22:26</td>   <td>-25407</td> <td>&nbsp;</td><td title="&lt;&lt;Constaints.endReport()[pri:0, instance:osintMonTestCases.VerifyTitle@78c03f1f]">&lt;&lt;endReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1675763772</td>   <td></td> </tr>
+<tr bgcolor="9fad9d">  <td>20/10/05 15:22:56</td>   <td>4618</td> <td>&nbsp;</td><td title="&lt;&lt;Constaints.endReport()[pri:0, instance:invalidTestCases.InvalidLogin@6325a3ee]">&lt;&lt;endReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1675763772</td>   <td></td> </tr>
+<tr bgcolor="9fad9d">  <td>20/10/05 15:23:21</td>   <td>29578</td> <td>&nbsp;</td><td title="&lt;&lt;Constaints.endReport()[pri:0, instance:validTestcases.ValidLogin@5b87ed94]">&lt;&lt;endReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1675763772</td>   <td></td> </tr>
+<tr bgcolor="9fad9d">  <td>20/10/05 15:22:26</td>   <td>-25420</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:osintMonTestCases.VerifyTitle@78c03f1f]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1675763772</td>   <td></td> </tr>
+<tr bgcolor="9fad9d">  <td>20/10/05 15:22:52</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:invalidTestCases.InvalidLogin@6325a3ee]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1675763772</td>   <td></td> </tr>
+<tr bgcolor="9fad9d">  <td>20/10/05 15:22:56</td>   <td>4617</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:invalidTestCases.InvalidLogin@6325a3ee]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1675763772</td>   <td></td> </tr>
+<tr bgcolor="9fad9d">  <td>20/10/05 15:23:13</td>   <td>21339</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:validTestcases.ValidLogin@5b87ed94]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1675763772</td>   <td></td> </tr>
+<tr bgcolor="9fad9d">  <td>20/10/05 15:23:17</td>   <td>25232</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:validTestcases.ValidLogin@5b87ed94]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1675763772</td>   <td></td> </tr>
+<tr bgcolor="9fad9d">  <td>20/10/05 15:23:20</td>   <td>28511</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:validTestcases.ValidLogin@5b87ed94]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1675763772</td>   <td></td> </tr>
+<tr bgcolor="9fad9d">  <td>20/10/05 15:23:21</td>   <td>29577</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:validTestcases.ValidLogin@5b87ed94]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1675763772</td>   <td></td> </tr>
+<tr bgcolor="a9cea0">  <td>20/10/05 15:23:20</td>   <td>28512</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidLogin.logOut()[pri:6, instance:validTestcases.ValidLogin@5b87ed94]">logOut</td> 
+  <td>main@1675763772</td>   <td></td> </tr>
+<tr bgcolor="9fad9d">  <td>20/10/05 15:23:21</td>   <td>29691</td> <td title="&lt;&lt;Constaints.tearDown()[pri:0, instance:validTestcases.ValidLogin@5b87ed94]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1675763772</td>   <td></td> </tr>
+<tr bgcolor="a9cea0">  <td>20/10/05 15:22:56</td>   <td>4677</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidLogin.validCredentials(java.lang.String, java.lang.String, java.lang.String)[pri:3, instance:validTestcases.ValidLogin@5b87ed94]">validCredentials</td> 
+  <td>main@1675763772</td>   <td></td> </tr>
+<tr bgcolor="d86b78">  <td>20/10/05 15:22:26</td>   <td>-25459</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyTitle.verifyPageTitle()[pri:0, instance:osintMonTestCases.VerifyTitle@78c03f1f]">verifyPageTitle</td> 
+  <td>main@1675763772</td>   <td></td> </tr>
+<tr bgcolor="a9cea0">  <td>20/10/05 15:23:13</td>   <td>21340</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidLogin.viewMonitor()[pri:4, instance:validTestcases.ValidLogin@5b87ed94]">viewMonitor</td> 
+  <td>main@1675763772</td>   <td></td> </tr>
 </table>
